--- a/appState.json
+++ b/appState.json
@@ -22,7 +22,7 @@
         "children": [],
         "isRemovable": true,
         "filePath": "sachiiii/lambda.js",
-        "code": "exports.handler = function (event, context, callback) {\n\n    callback(event);\n}",
+        "code": "exports.handler =  async function(event, context) {\n  console.log(\"EVENT: \\n\" + JSON.stringify(event, null, 2))\n  return context.logStreamName\n}",
         "config": {
           "runtime": "nodejs8.10",
           "handler": "handler",
@@ -121,7 +121,7 @@
     "projectRegion": "us-east-1",
     "platform": "AWS",
     "platformRegions": {},
-    "lastSave": 1568005818954
+    "lastSave": 1568006100305
   },
   "VCS_STATE": {
     "provider": "GitHub",
